fixed x and y overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
   flex-direction: row;
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
 }
 
@@ -9,11 +9,12 @@
   display: flex;
   flex-direction: row;
   background-color: #696195;
+  width:100%;
 }
 
 .strip {
   margin-top: 20px;
-  width: 50px;
+  width: 4%;
   display: flex;
   flex-direction: column;
 }
@@ -25,7 +26,7 @@
 }
 
 .main-content {
-    width: 80%;
+    width: 96%;
     display: flex;
 }
 
