--- a/src/screens/HomeScreenStyles.css
+++ b/src/screens/HomeScreenStyles.css
@@ -1,11 +1,12 @@
 .homeScreenContainer{
     display: flex;
+    width: 100%;
 }
 
 .sidebar{
-    width:50vh;
+    width:25%;
 
 }
 .graph{
-    width: 153.5vh;
+    width: 75%;
 }
